Go declaring a slice

--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -13,6 +13,19 @@ layout: golang
 
 <section>
     <h2>Declaring a Slice</h2>
+    <p>First of all, we can declare a completely empty slice like this: </p>
+    <pre><code class="language-go">
+empty_slice = []<i>datatype</i>
+    </code></pre>
+    <p>If we want to initialize some values, we can do it like this: </p>
+    <pre><code class="language-go">
+non_empty_slice = []<i>datatype</i>{<i>values</i>}
+    </code></pre>
+    <p>The values are seperated by commas. For example: </p>
+    <pre><code class="language-go">
+cities = []string{"New York", "San Francisco", "Los Angeles", "Chicago"}
+nums = []int{6,3,6,8,26,34,432}
+    </code></pre>
 </section>
 
 <section>
