--- a/programming/golang/while-loop.html
+++ b/programming/golang/while-loop.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
     <h2>Making a While Loop</h2>
-    <p>Actually, the title of this tutorial is quite misleading since Go has no while loops. Instead, Go uses the for loop to replace the while loop, which is a seperate loop in some other programming languages. Below is the syntax: </p>
+    <p>Actually, the title of this tutorial is quite misleading since Go has no while loops. This tutorial was only created because we couldn't find a place to put it in the tutorial on for loops. Instead, Go uses the for loop to replace the while loop, which is a seperate loop in some other programming languages. Below is the syntax: </p>
     <pre><code class="language-go">
 for <i>condition</i> {
     // code to keep repeating
