--- a/programming/javascript/jquery/setup-jquery.html
+++ b/programming/javascript/jquery/setup-jquery.html
@@ -8,5 +8,5 @@ layout: jquery
 
 <section>
     <h2>How to Setup jQuery</h2>
-    <p>jQuery is hosted on online CDNs.</p>
+    <p>jQuery is hosted on online CDNs. For this tutorial, we will include the jQuery library using GoogleApis. To do this,</p>
 </section>
