--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -18,8 +18,10 @@ layout: golang
 
 <section>
 	<h2>What is a For Loop?</h2>
+    <p>A For Loop in programming is a loop that loops a certain number of times. It can <i>iterate</i>, or loop over, an array or any other iterable (array, slices, etc.).</p>
 </section>
 
 <section>
 	<h2>Making For Loops in Go</h2>
+    <p>In Go, it is actually very easy to make For Loops. To do so, </p>
 </section>
