--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -23,5 +23,14 @@ layout: golang
 
 <section>
 	<h2>Making For Loops in Go</h2>
-    <p>In Go, it is actually very easy to make For Loops. To do so, </p>
+    <p>In Go, we can make For Loops by using the <code>for</code> keyword. The syntax for Go For Loops is:</p>
+    <pre><code class="language-go">
+for initialization; condition; update {
+    // looped code goes here
+}
+    </code></pre>
+    <p>As an example, type the following code into a <code>.go</code> file:</p>
+    <pre><code class="language-go">
+        
+    </code></pre>
 </section>
