--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -31,6 +31,27 @@ for initialization; condition; update {
     </code></pre>
     <p>As an example, type the following code into a <code>.go</code> file:</p>
     <pre><code class="language-go">
+        package main
+
+        import "fmt"
         
+        func main() {
+            for i := 0; i < 10; i++ {
+                fmt.Println(i)
+            }
+        }
     </code></pre>
+    <p>After running this code, the result is:</p>
+    <pre><samp>
+0
+1
+2
+3
+4
+5
+6
+7
+8
+9
+    </samp></pre>
 </section>
