--- a/programming/golang/pointers.html
+++ b/programming/golang/pointers.html
@@ -13,4 +13,18 @@ layout: golang
 
 <section>
     <h2>Making a Pointer</h2>
+    <p>Below is the general format of making a pointer: </p>
+    <pre><code class="language-go">
+var <i>variable-name</i> *<i>data-type</i>
+    </code></pre>
+    <p><code><i>variable-name</i></code> is the name of the pointer variable we want to make. <code>data-type</code> is the data type of the variable in the memory address we are referencing.</p>
+</section>
+
+<section>
+    <h2>Getting the Address of a Variable</h2>
+    <p>To get the address of a variable in Go, we put the ampersand symbol (<code>&</code>) before the variable. For example: </p>
+    <pre><code class="language-go">
+var x int = 5
+
+    </code></pre>
 </section>
