finish setting up jquery

--- a/programming/javascript/jquery/setup-jquery.html
+++ b/programming/javascript/jquery/setup-jquery.html
@@ -19,4 +19,10 @@ layout: jquery
 &#60;script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"&#62;&#60;/script&#62
 &#60;/head&#62;
     </code></pre>
+    <p>Now, you are ready to write your jQuery code!</p>
+</section>
+
+<section>
+    <h2>Writing JavaScript jQuery Code</h2>
+    <p>In order to use jQuery in your JavaScript code, you need to write your JavaScript code in <code>script.js</code> file.</p>
 </section>
