why use pointers

--- a/programming/golang/pointers.html
+++ b/programming/golang/pointers.html
@@ -12,6 +12,11 @@ layout: golang
 </section>
 
 <section>
+    <h2>Why use Pointers?</h2>
+    <p>We can use pointers if we want to physically change the variables we want to pass into our function. However, it's usually best to use normal variables over pointers.</p>
+</section>
+
+<section>
     <h2>Making a Pointer</h2>
     <p>Below is the general format of making a pointer: </p>
     <pre><code class="language-go">
