--- a/programming/javascript/jquery/selecting-elements.html
+++ b/programming/javascript/jquery/selecting-elements.html
@@ -23,3 +23,7 @@ $(document).ready(function(){
 &#60;p&#62;No, Click Me!&#60;/p&#62;
     </code></pre>
 </section>
+
+<section>
+    <h2>Code Breakdown</h2>
+</section>
