put the hello world code outside of the <p> tag

--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -13,7 +13,9 @@ layout: golang
 
 <section>
     <h2>Why use loops?</h2>
-    <p>Well, as an example, let's say that you want to print <samp>Hello World!</samp> 5 times. We already know that the code for one <samp>Hello World!</samp> is:</p><pre><code class="language-go">fmt.Println("Hello World!")</code></pre>.<p>Sure, you could copy and paste the code 5 times, it's not a lot, but hat if you wanted to print <samp>Hello World!</samp> 1000 times? That's when the power of loops comes in!! Instead of writing 1000 lines of code, we can only write a few!</p>
+    <p>Well, as an example, let's say that you want to print <samp>Hello World!</samp> 5 times. We already know that the code for one <samp>Hello World!</samp> is:</p>
+    <pre><code class="language-go">fmt.Println("Hello World!")</code></pre>
+    <p>Sure, you could copy and paste the code 5 times, it's not a lot, but hat if you wanted to print <samp>Hello World!</samp> 1000 times? That's when the power of loops comes in!! Instead of writing 1000 lines of code, we can only write a few!</p>
 </section>
 
 <section>
