--- a/programming/javascript/jquery/selecting-elements.html
+++ b/programming/javascript/jquery/selecting-elements.html
@@ -26,4 +26,6 @@ $(document).ready(function(){
 
 <section>
     <h2>Code Breakdown</h2>
+    <p>Now, let's see how the <code>$</code> function works!</p>
+    <p>On the first line of the JavaScript code, we have <pre><code class="language-javascript">$(document).ready(function(){</code></pre> which tells our web browser to <b>ONLY</b> run the code once the document, or web page, has loaded. Without it, our JavaScript code might try to access some elements that haven't been created yet on the page!!</p>
 </section>
