Put while loop stuff in for loop tutorial

--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -86,3 +86,20 @@ func main() {
 0
     </samp></pre>
 </section>
+
+<section>
+    <h2>The Other Use of the For Loop</h2>
+    <p>In many other programming languages like Java and Python, there is another loop called the while loop. However, in Go, we use the for loop instead of another loop. However, the concept is exactly the same.</p>
+    <p>A while loop is basically an if statement, but the code runs as long as that condition is fulfilled. Below is the syntax:</p>
+    <pre><code class="language-go">
+for <i>condition</i> {
+    // code to run while the condition is fulfilled
+}
+    </code></pre>
+    <p>For example, the loop would run an infinite amount of times: </p>
+    <pre><code class="language-go">
+for true {
+    // code to run infinitely
+}
+    </code></pre>
+</section>
