--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -88,7 +88,7 @@ func main() {
 </section>
 
 <section>
-    <h2>The Other Use of the For Loop</h2>
+    <h2>The Other Use of For Loops</h2>
     <p>In many other programming languages like Java and Python, there is another loop called the while loop. However, in Go, we use the for loop instead of another loop. However, the concept is exactly the same.</p>
     <p>A while loop is basically an if statement, but the code runs as long as that condition is fulfilled. Below is the syntax:</p>
     <pre><code class="language-go">
