use <em> instead of <i>

--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -20,7 +20,7 @@ layout: golang
 
 <section>
 	<h2>What is a For Loop?</h2>
-    <p>A for loop in programming is a loop that loops a certain number of times. It can <i>iterate</i>, or loop over, an array or any other iterable (array, slices, etc.).</p>
+    <p>A for loop in programming is a loop that loops a certain number of times. It can <em>iterate</em>, or loop over, an array or any other iterable (array, slices, etc.).</p>
 </section>
 
 <section>
