oops forgot slash

--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -27,7 +27,7 @@ layout: golang
 	<h2>Making For Loops in Go</h2>
     <p>In Go, we can make for loops by using the <code>for</code> keyword. The syntax for Go for loops is:</p>
     <pre><code class="language-go">
-for <i>initialization</i>; <i>condition<i>; <i>update</i> {
+for <i>initialization</i>; <i>condition</i>; <i>update</i> {
     // looped code goes here
 }
     </code></pre>
