its a, not button

--- a/settings.html
+++ b/settings.html
@@ -6,5 +6,5 @@ layout: default
 
 <section>
     <h1>Learnmonkey Settings</h1>
-    <button onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
+    <a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
 </section>
