--- a/programming/javascript/index.html
+++ b/programming/javascript/index.html
@@ -1,7 +1,7 @@
 ---
 title: Introduction to JavaScript
 permalink: /programming/javascript/
-layout: default
+layout: javascript
 ---
 
 <h1>Introduction to JavaScript</h1>
