--- a/programming/javascript/jquery/index.html
+++ b/programming/javascript/jquery/index.html
@@ -26,6 +26,6 @@ layout: jquery
     <ul>
         <li>Knowledge of HTML</li>
         <li>Knowledge of JavaScript</li>
-        <li>Knowledge of CSS would be good, but not required</li>
+        <li>Knowledge of CSS</li>
     </ul>
 </section>
