--- a/programming/index.html
+++ b/programming/index.html
@@ -16,7 +16,7 @@ layout: default
         <li><a href="/programming/java/">Java</a></li>
         <li><a href="/programming/git/">Git</a></li>
     </ul>
-    <p>Find more in our <a href="/tutorial-index/">Tutorial Index</a>.</p>
+    <p>Find more programming tutorials in our <a href="/tutorial-index/">Tutorial Index</a>.</p>
 </section>
 
 <section>
