add page titles

--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -10,3 +10,11 @@ permalink: /programming/python/flask/routing/
     <h2>What is Routing?</h2>
     <p>Routing simply means returning code (or web pages) when someone visits yours site. For example, in the previous tutorial, we had one route: the <code>/</code> route which is our home page. In this tutorial, we will learn a little bit more about routing with Flask.</p>
 </section>
+
+<section>
+    <h2>Routing In Flask</h2>
+</section>
+
+<section>
+    <h2><code>/page</code> vs <code>/page/</code></h2>
+</section>
