--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -8,7 +8,7 @@ permalink: /programming/python/flask/routing/
 
 <section>
     <h2>What is Routing?</h2>
-    <p>Routing simply means returning code (or web pages) when someone visits yours site. For example, in the previous tutorial, we had one route: the <code>/</code> route which was our home page. In this tutorial, we will learn a little bit more about routing with Flask.</p>
+    <p>Routing simply means returning code (or HTML pages) when someone visits a specific URL on your site. For example, in the previous tutorial, we had one route: the <code>/</code> route which is our home page. In this tutorial, we will learn a little bit more about routing with Flask.</p>
 </section>
 
 <section>
