--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -12,7 +12,8 @@ permalink: /programming/python/flask/routing/
 </section>
 
 <section>
-    <h2>Routing In Flask</h2>
+    <h2>Making Routes In Flask</h2>
+    <p>Flask is what we call a <i>Backend Web Framework</i>, or a framework for creating the backend code for a site. Backend is handling the user requests and the code on the server. <i>Frontend</i> programming is creating the actual user interface, or the <a href="/programming/html/">HTML</a> code, on the site. Anyways, how do you make routes in Flask? Well, we simply type <pre><code class="language-python">@app.route("/my-route")</code></pre></p>
 </section>
 
 <section>
