Go pointers add a little

--- a/programming/golang/pointers.html
+++ b/programming/golang/pointers.html
@@ -63,3 +63,11 @@ func main() {
 5
     </samp></pre>
 </section>
+
+<section>
+    <h2>Indirect Assignments</h2>
+    <p>When we ask Go to change the value of a variable, up to now Go has been changing the data inside the memory that the variable is pointing to. However, we can also change the piece of memory that the variable is pointing to. This is called indirectly assignment. The format is: </p>
+    <pre><code class="language-go">
+
+    </code></pre>
+</section>
