--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -13,7 +13,7 @@ permalink: /programming/python/flask/routing/
 
 <section>
     <h2>Making Routes In Flask</h2>
-    <p>Flask is what we call a <i>Backend Web Framework</i>, or a framework for creating the backend code for a site. Backend is handling the user requests and the code on the server. <i>Frontend</i> programming is creating the actual user interface, or the <a href="/programming/html/">HTML</a> code, on the site. Anyways, how do you make routes in Flask? Well, we simply type <pre><code class="language-python">@app.route("/my-route")</code></pre></p>
+    <p>Flask is what we call a <i>Backend Web Framework</i>, or a framework for creating the backend code for a site. Backend is handling the user requests and the code on the server. <i>Frontend</i> programming is creating the actual user interface, or the <a href="/programming/html/">HTML</a> code, on the site. Anyways, how do you make routes in Flask? Well, we simply type <pre><code class="language-python">@app.route("/my-route")</code></pre> and then followed by a function. In that function, we will return HTML code as a string. You can also return HTML code as a <i>template</i>, as we will learn in the <i><a href="/programming/python/flask/templating/">next tutorial</a></i>.</p>
 </section>
 
 <section>
