change mission statement

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ layout: default
 
 <section>
     <h2>Our Mission</h2>
-    <p>At Learnmonkey, our mission is to provide high-quality educational content to anyone with an internet access for free.</p>
+    <p>At Learnmonkey, we strive to provide high-quality educational content for free.</p>
 </section>
 
 <section>
