--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 <section>
     <h1><a href="/about/">About</a></h1>
     <h2>Our Mission</h2>
-    <p>The mission of Learnmonkey is to provide high-quality educational content for free.</p>
+    <p>At Learnmonkey, we strive to provide high-quality educational content for free.</p>
     <h2>Contributing</h2>
     <p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would greatly appreciate it if you contributed through pull requests and issues.</p>
     <h2>Donating</h2>
