--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -27,6 +27,15 @@ def hello_there():
 def greet(name):
     return f"Hi There, {name}!"
     </code></pre>
+    <p>Now, once you have finished copying that code down, we can start experimenting with routes!</p>
+</section>
+
+<section>
+    <h2>The Different Routes</h2>
+</section>
+
+<section>
+    <h2>URL Variables</h2>
 </section>
 
 <section>
