--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -27,7 +27,7 @@ def hello_there():
 def greet(name):
     return f"Hi There, {name}!"
     </code></pre>
-    <p>Now, once you have finished copying that code down, we can start experimenting with routes!</p>
+    <p>Now, once you have finished copying that code down and have ran it, we can start experimenting with routes!</p>
 </section>
 
 <section>
