--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -23,7 +23,7 @@ def say_hi():
 def hello_there():
     return "Hello There"
 
-@app.route("/greet/&#60;name&#62;")
+@app.route("/greet/&lt;name>")
 def greet(name):
     return f"Hi There, {name}!"
     </code></pre>
