add new sections for templating

--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -5,3 +5,15 @@ permalink: /programming/python/flask/templating/
 ---
 
 <h1>Templating</h1>
+
+<section>
+    <h2>What is Templating?</h2>
+</section>
+
+<section>
+    <h2>Making Templates in Flask</h2>
+</section>
+
+<section>
+    <h2>Running Python in Templates</h2>
+</section>
