--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -8,6 +8,7 @@ permalink: /programming/python/flask/templating/
 
 <section>
     <h2>What is Templating?</h2>
+    <p>Templating is returning HTML code when someone visits a route on your site. A template is useful when you want to return an actual HTML site and not just some text. For example, you might have an e-commerce site, but you don't want to just write your HTML code in your Python file. Instead, you can just use an external <i>template</i> and return that instead.</p>
 </section>
 
 <section>
