--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -14,7 +14,19 @@ permalink: /programming/python/flask/templating/
 <section>
     <h2>Making Templates in Flask</h2>
     <p>To make a template in Flask, you will first need to create a <i>directory</i>, or folder, named <code>templates</code>. You can write your HTML code in your <code>templates</code> folder. For this tutorial, we will create our Home Page using a template.</p>
-    <p>First, let's make a file called <code>index.html</code>. We will write <a href="/programming/html/">HTML</a> code in there. If you are unfamiliar with HTML but want to learn it, then check out our <a href="/programming/html/">HTML</a> tutorial.</p>
+    <p>First, let's make a file called <code>index.html</code>. We will write <a href="/programming/html/">HTML</a> code in there. If you are unfamiliar with HTML but want to learn it, then check out our <a href="/programming/html/">HTML</a> tutorial. But, now, copy the following code into your HTML file:</p>
+    <pre><code class="language-html">
+&#60;!DOCTYPE html&#62;
+&#60;html&#62;
+&#60;head&#62;
+    &#60;title&#62;Hello!&#60;/title&#62;
+&#60;/head&#62;
+&#60;body&#62;
+    &#60;h1&#62;Hello, There!&#60;/h1&#62;
+    &#60;p&#62;Welcome to my site!&#60;/p&#62;
+&#60;/body&#62;
+&#60;/html&#62;
+    </code></pre>
 </section>
 
 <section>
