--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -27,6 +27,7 @@ permalink: /programming/python/flask/templating/
 &#60;/body&#62;
 &#60;/html&#62;
     </code></pre>
+    <p>If you don't understand the code, then here's a quick explanation:</p>
 </section>
 
 <section>
