--- a/programming/python/flask/index.html
+++ b/programming/python/flask/index.html
@@ -9,6 +9,7 @@ permalink: /programming/python/flask/
 <section>
     <h2>What is Flask?</h2>
     <p>Flask is a super lightweight microframework for creating web applications with Python. It's super easy to get started. However, Flask, unlike something like Django, does not have features like authentication built in. You need to import other modules to do that.</p>
+    <p>Flask is a <em>backend web framework</em> which means that Flask runs the code behind the scenes. Backend means that Flask handles all the user requests and the code on the server.</p>
     <img src="/images/programming/python/flask/flask-logo.png" alt="Flask Logo">
 </section>
 
