language-python not language-go

--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -14,7 +14,7 @@ permalink: /programming/python/flask/routing/
 <section>
     <h2>Making Routes In Flask</h2>
     <p>In Flask, we create routes to handle what happens when the user goes to a particular address. For example, if we wanted to return "Hello World" every time the user visits the route <code>localhost:8080/hello-world/</code>, we would type: </p>
-    <pre><code class="language-go">
+    <pre><code class="language-python">
 from flask import Flask
 app = Flask(__name__)
 
