Add quick sentence

--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -27,6 +27,7 @@ app.run(port=8080)
     <p><code>@app.route("/hello-world/")</code> is a decorator, which tells Python to change the behavior of the next function. Here, it makes Flask run the next function whenver we visit <code>/hello-world</code>.</p>
     <p>Then, we actually declare the function. The name of the function actually doesn't matter, but it's always good to have descriptive names.</p>
     <p>Flask gets the return value of the shows it to the user. Now, when we visit <code>localhost:8080/hello-world</code>, we see "Hello World".</p>
+    <p>We can have as many routes as we want.</p>
 </section>
 
 <section>
