--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -18,17 +18,18 @@ layout: html
 <section>
     <h2>Writing the Code</h2>
     <p>Our code will look as follows: </p>
-    <pre style="color:#000000;background:#ffffff;"><span style="color:#004a43; ">&lt;!DOCTYPE html&gt;</span>
-    <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">html</span><span style="color:#a65700; ">&gt;</span>
-        <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">head</span><span style="color:#a65700; ">&gt;</span>
-            <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">title</span><span style="color:#a65700; ">&gt;</span>Hello<span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">title</span><span style="color:#a65700; ">&gt;</span>
-        <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">head</span><span style="color:#a65700; ">&gt;</span>
-        <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">body</span><span style="color:#a65700; ">&gt;</span>
-            <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">h1</span><span style="color:#a65700; ">&gt;</span>Welcome To My Website!<span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">h1</span><span style="color:#a65700; ">&gt;</span>
-            <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">p</span><span style="color:#a65700; ">&gt;</span>Hello World!<span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">p</span><span style="color:#a65700; ">&gt;</span>
-        <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">body</span><span style="color:#a65700; ">&gt;</span>
-    <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">html</span><span style="color:#a65700; ">&gt;</span>
-    </pre>
+    <pre><code class="language-html">
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello</title>
+    </head>
+    <body>
+        <h1>Welcome To My Website!</h1>
+        <p>Hello World!</p>
+    </body>
+</html>
+    </code></pre>
     <p>Copy it and put it in Sublime Text: </p>
     <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text">
     <p>Then, hit the <kbd>Ctrl</kbd> and <kbd>S</kbd> keys at the same time. You should see the following window pop up: </p>
