--- a/programming/python/flask/your-first-flask-website.html
+++ b/programming/python/flask/your-first-flask-website.html
@@ -9,15 +9,18 @@ layout: flask
 <section>
     <h2>Writing the Code</h2>
     <p>The code will be as follows: </p>
-    <pre style="color:#000000;background:#ffffff;"><span style="color:#800000; font-weight:bold; ">from</span> flask <span style="color:#800000; font-weight:bold; ">import</span> Flask
-app <span style="color:#808030; ">=</span> Flask<span style="color:#808030; ">(</span><span style="color:#0000e6; ">'app'</span><span style="color:#808030; ">)</span>
-    
-<span style="color:#808030; ">@</span>app<span style="color:#808030; ">.</span>route<span style="color:#808030; ">(</span><span style="color:#0000e6; ">'/'</span><span style="color:#808030; ">)</span>
-<span style="color:#800000; font-weight:bold; ">def</span> hello_world<span style="color:#808030; ">(</span><span style="color:#808030; ">)</span><span style="color:#808030; ">:</span>
-  <span style="color:#800000; font-weight:bold; ">return</span> <span style="color:#0000e6; ">'Hello, World!'</span>
-    
-app<span style="color:#808030; ">.</span>run<span style="color:#808030; ">(</span>port<span style="color:#808030; ">=</span><span style="color:#008c00; ">8080</span><span style="color:#808030; ">)</span>
-    </pre>
+    <pre>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello</title>
+    </head>
+    <body>
+        <h1>Welcome To My Website!</h1>
+        <p>Hello World!</p>
+    </body>
+</html>
+  </pre>
 </section>
 
 <section>
