--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -27,7 +27,7 @@ permalink: /programming/python/flask/templating/
 &#60;/body&#62;
 &#60;/html&#62;
     </code></pre>
-    <p>If you don't understand the code, then here's a quick explanation:</p>
+    <p>If you don't understand the code, you can view the code explanation <a href="/programming/html/your-first-html-website/">here</a></p>
 </section>
 
 <section>
