--- a/programming/python/flask/routing.html
+++ b/programming/python/flask/routing.html
@@ -48,5 +48,5 @@ app.run(port=8080)
 
 <section>
     <h2><code>/page</code> vs <code>/page/</code></h2>
-    <p>There is a difference between <code>/page</code> and <code>/page/</code>. If use <code>/page</code>, both <code>/page</code> <u>and</u> <code>/page/</code> will work. However, if we use <code>/page/</code>, <code>/page</code> will not work but <code>/page/</code> will work.</p>
+    <p>There is a difference between <code>/page</code> and <code>/page/</code>. If use <code>/page</code>, <code>/page</code> will work but <code>/page/</code> will not. However, if we use <code>/page/</code> as the route, both <code>/page</code> and <code>/page/</code> will work (albeit <code>/page</code> will redirect to <code>/page/</code>)</p>
 </section>
